--- a/client/src/app/components/positions-details/positions-details.component.html
+++ b/client/src/app/components/positions-details/positions-details.component.html
@@ -25,7 +25,7 @@
             <div class="company-border">
               <img alt="Company Logo" class="userimg" src="{{info?.company_logo ? info?.company_logo : 'assets/icons/ic_company.svg'}}">
             </div>
-            <h5  routerLink="../company-page/{{info.company_id}}">{{info.company_name}}</h5>
+            <h5 [routerLink]="['/company-info/', info.company_id]">{{info.company_name}}</h5>
             <img src="assets/icons/ic_location.svg">
             <span class="company-address"
               *ngIf="info.hq_city_name && info.hq_state_name && info.hq_country_name; else noLocation">
