--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.scss
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.scss
@@ -434,7 +434,7 @@ $profile-form-field-mt: 30px;
               max-height: 30px;
 
               &.skill-more-height {
-                max-height: 153px;
+                max-height: 100%;
               }
             }
           }
