--- a/client/src/app/pages/application/application-detail/application-nav-section/application-nav-section.component.html
+++ b/client/src/app/pages/application/application-detail/application-nav-section/application-nav-section.component.html
@@ -1,6 +1,7 @@
 <div class="comman_search_filter">
   <div class="postion-search-detail">
     <div class="filter-data">
+      <h3 class="section-title">APPLICATION </h3>
       <mat-icon (click)="toggleTabOpen()" class="filter_icon">{{filter_list ? 'clear' : 'menu'}}</mat-icon>
     </div>
   </div>
