--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
@@ -103,7 +103,7 @@
         </section>
 
         <div class="row position-qualification-detail" id="qualification_level_breakdown"
-        *ngIf=" positionName[0]?.minimum_skills?.length > 0 || positionName[0]?.true_fitscore_info?.skills_weight > 0 || positionName[0]?.true_fitscore_info?.education_weight > 0 || positionName[0]?.true_fitscore_info?.experience_weight > 0 || positionName[0]?.true_fitscore_info?.interests_weight > 0 ">
+          *ngIf=" positionName[0]?.minimum_skills?.length > 0 || positionName[0]?.true_fitscore_info?.skills_weight > 0 || positionName[0]?.true_fitscore_info?.education_weight > 0 || positionName[0]?.true_fitscore_info?.experience_weight > 0 || positionName[0]?.true_fitscore_info?.interests_weight > 0 ">
           <h3>Qualification Level Estimate Breakdown</h3>
           <div class="position-qualification-skills" *ngFor="let score of positionName">
             <simple-tag *ngIf="score.true_fitscore_info?.skills_weight" type="gray" title="Skills Match"
@@ -130,11 +130,11 @@
         </div>
         <div id="skills" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0">
           <div class="row position-required-skills-detail main-card">
-              <div class="show-button">
-                  <action-button routerLink="." type="text" title="{{!info.showMoreFlag ? 'See All' :
+            <div class="show-button">
+              <action-button routerLink="." type="text" title="{{!info.showMoreFlag ? 'See All' :
                       'See Less'}}" color="primary" (click)="info.showMoreFlag = !info.showMoreFlag"
-                    *ngIf="matchedSkills?.length > 2 || missingSkills?.length > 2"></action-button>
-                </div>
+                *ngIf="matchedSkills?.length > 2 || missingSkills?.length > 2"></action-button>
+            </div>
             <h3>Matched Skills</h3>
 
             <ul>
@@ -143,18 +143,13 @@
                     *ngIf="matchedSkills?.length > 0">{{ matchedSkills?.length}}</span>
                 </h5>
                 <div *ngIf="matchedSkills?.length; else noSkill">
-                  <div class="skil-height-fix" [ngClass]="{'skill-more-height': info.showMoreFlag}" *ngIf="displayItemsLimit; let limit">
+                  <div class="skil-height-fix" [ngClass]="{'skill-more-height': info.showMoreFlag}"
+                    *ngIf="displayItemsLimit; let limit">
                     <div class="skills-preferred-m green-color-tag"
                       *ngFor="let matchSkill of matchedSkills; let i = index; ">
-                      <simple-tag type="green" *ngIf="i < limit" title="{{matchSkill.skill}}">
+                      <simple-tag type="green" title="{{matchSkill.skill}}">
                       </simple-tag>
                     </div>
-                    <!-- <img *ngIf="lessFlag && limit > displayItemsLimit && matchedSkills?.length > displayItemsLimit"
-                      class="edu_img" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg"
-                      alt="See Less">
-                    <img *ngIf="limit < matchedSkills?.length" class="edu_img"
-                      (click)="limit = limit + displayItemsLimit" (click)="lessFlag = true"
-                      src="assets/icons/ic_see_more.svg" alt="See More"> -->
                   </div>
                 </div>
               </li>
@@ -163,17 +158,12 @@
                     *ngIf="missingSkills?.length > 0">{{ missingSkills?.length}}</span>
                 </h5>
                 <div *ngIf="missingSkills?.length; else noSkill">
-                  <div class="skil-height-fix" [ngClass]="{'skill-more-height': info.showMoreFlag}" *ngIf="displayItemsLimit; let limit">
+                  <div class="skil-height-fix" [ngClass]="{'skill-more-height': info.showMoreFlag}"
+                    *ngIf="displayItemsLimit; let limit">
                     <div class="skills-preferred-m red-color-tag" *ngFor="let skill of missingSkills ; let i = index; ">
-                      <simple-tag type="red" *ngIf="i < limit" title="{{skill.skill}}">
+                      <simple-tag type="red" title="{{skill.skill}}">
                       </simple-tag>
                     </div>
-                    <!-- <img *ngIf="lessFlag && limit > displayItemsLimit && missingSkills?.length > displayItemsLimit"
-                      class="edu_img" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg"
-                      alt="See Less">
-                    <img *ngIf="limit < missingSkills?.length" class="edu_img"
-                      (click)="limit = limit + displayItemsLimit" (click)="lessFlag = true"
-                      src="assets/icons/ic_see_more.svg" alt="See More"> -->
                   </div>
                 </div>
                 <ng-template #noSkill>
@@ -309,7 +299,8 @@
                 <div class="skills" *ngIf="displayItemsLimit; let limit">
                   <div class="skills-preferred-m" *ngFor="let min_skill of jobData.minimum_skills; let i = index; ">
                     <simple-tag type="gray" *ngIf="i < limit" title="{{min_skill.skill}}" ellipseTag="true"
-                      value="{{min_skill.skill_level}}" [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
+                      value="{{min_skill.skill_level}}"
+                      [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
                       [matTooltipShowDelay]=500>
                     </simple-tag>
                   </div>
@@ -332,7 +323,8 @@
                 <div class="skills" *ngIf="displayItemsLimit; let limit">
                   <div class="skills-preferred-m" *ngFor="let preskill of jobData.preferred_skills; let i = index;">
                     <simple-tag *ngIf="i < limit" type="normal" title="{{preskill.skill}}" ellipseTag="true"
-                      value="{{preskill.skill_level}}"[matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
+                      value="{{preskill.skill_level}}"
+                      [matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
                       [matTooltipShowDelay]=500>
                     </simple-tag>
                   </div>
