--- a/client/src/app/pages/profile/user-profile/header-section/header-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/header-section/header-section.component.scss
@@ -1,18 +1,10 @@
-@import './../../../../../styles/variables.scss';
+@import "./../../../../../styles/variables.scss";
 
 :host {
   grid-area: hero;
   background-color: white;
-
-  .back-row {
-    height: 60px;
-    padding-left: 40px;
-    display: none;
-    align-items: center;
-    border-bottom: 1px solid map-get($md-cfaccent, 50);
-  }
-
-  button.back { // TODO: Make more like the designs
+  button.back {
+    // TODO: Make more like the designs
     width: 80px;
     height: 30px;
     background-color: rgba(map-get($md-cfaccent, 500), 0.05);
@@ -54,7 +46,7 @@
 
     h3 {
       cursor: pointer;
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
       text-transform: uppercase;
       color: map-get($md-cfaccent, 300);
       display: inline;
@@ -72,8 +64,9 @@
 
 .icon-title {
   display: inline-grid;
-  grid-template: "image title" 28px "image info" 28px
-  / 56px auto;
+  grid-template:
+    "image title" 28px "image info" 28px
+    / 56px auto;
   grid-gap: 0 10px;
   width: 240px;
 
@@ -85,7 +78,7 @@
   label {
     grid-area: title;
     font-size: 14px;
-    color: rgba(map-get($md-cfaccent, 500), .44);
+    color: rgba(map-get($md-cfaccent, 500), 0.44);
     line-height: 28px;
   }
 
@@ -103,7 +96,7 @@
 
 h1 {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 5px;
 }
 
@@ -118,14 +111,14 @@ small {
   // min-width: 255px;
   padding-right: 25px;
   margin-bottom: 10px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  color: rgba(map-get($md-cfaccent, 500), .84);
+  color: rgba(map-get($md-cfaccent, 500), 0.84);
 
   label {
-    color: rgba(map-get($md-cfaccent, 500), .34);
+    color: rgba(map-get($md-cfaccent, 500), 0.34);
     margin-right: 5px;
   }
 
@@ -161,14 +154,14 @@ small {
     margin-left: 30px; // removing image margin-right adding left here
 
     h1 {
-      font-family: 'Poppins', sans-serif;
+      font-family: "Poppins", sans-serif;
       font-size: 30px;
       line-height: 34px;
       font-weight: 600;
     }
 
     h4 {
-      font-family: 'Roboto', sans-serif;
+      font-family: "Roboto", sans-serif;
       font-size: 16px;
       line-height: 21px;
       margin-bottom: 20px;
@@ -194,15 +187,17 @@ small {
     .form-field {
       margin: 0 5px 10px 5px;
       display: inline-grid;
-      grid-template: "field" auto
+      grid-template:
+        "field" auto
         / 280px;
       border: solid 1px $mat-form-border-color;
       border-radius: 5px;
       padding: 0;
 
       &.name-field {
-        grid-template: "first last" auto
-        / 130px 150px;
+        grid-template:
+          "first last" auto
+          / 130px 150px;
       }
 
       mat-form-field {
@@ -232,9 +227,6 @@ small {
 @media only screen and (max-width: 991px) {
   :host {
     margin-top: 60px;
-    .back-row {
-      display: flex;
-    }
   }
   .user-row {
     padding: 20px 20px;
@@ -250,7 +242,8 @@ small {
     }
 
     .user-detail {
-      h1, h4 {
+      h1,
+      h4 {
         text-align: center;
       }
     }
@@ -271,8 +264,6 @@ small {
 }
 
 @media only screen and (max-width: 480px) {
-
-
   .user-row {
     .user-detail {
       .user-info {
@@ -291,12 +282,14 @@ small {
 
     .edit-form {
       .form-field {
-        grid-template: "field" auto
+        grid-template:
+          "field" auto
           / 270px;
 
         &.name-field {
-          grid-template: "first last" auto
-          / 125px 145px;
+          grid-template:
+            "first last" auto
+            / 125px 145px;
         }
       }
     }
@@ -312,14 +305,14 @@ small {
 }
 
 .hover-img:hover:after {
-  content: '';
+  content: "";
   position: absolute;
   cursor: pointer;
   left: 0px;
   top: 0px;
   bottom: 0px;
   width: 100%;
-  background: url('./../../../../../assets/icons/ic-camera.svg') center no-repeat;
+  background: url("./../../../../../assets/icons/ic-camera.svg") center no-repeat;
   background-size: 50px;
 }
 
