--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -155,9 +155,11 @@ a {
         height: calc(100vh - 70px);
         padding-bottom: 120px;
         overflow-y: scroll;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
         box-sizing: border-box;
+        &::-webkit-scrollbar{
+          width: 0;
+          background-color: transparent;
+        }
 
         .nav-title {
           height: 44px;
@@ -201,7 +203,84 @@ a {
               margin-bottom: 10px;
             }
           }
+          mat-icon {
+            position: absolute;
+            right: 15px;
+            top: 18px;
+            display: none;
+          }
+          &.active {
+            color: map-get($md-cfprimary, 500);
+            h3 {
+              color: map-get($md-cfprimary, 500);
+            }
+            ol {
+              display: block;
+            }
+            mat-icon {
+              display: block;
+            }
+            &:before {
+              content: "";
+              position: absolute;
+              left: 0;
+              top: 10px;
+              width: 4px;
+              height: 39px;
+              border-top-right-radius: 4px;
+              border-bottom-right-radius: 4px;
+              background-color: map-get($md-cfprimary, 500);
+            }
+          }
         }
+
+        .filter-card {
+          position: relative;
+          padding: 10px 15px;
+          height: fit-content;
+          background: white;
+          border-radius: 5px;
+          margin-bottom: 2px;
+
+          & mat-select {
+            font-size: 14px;
+            font-family: "Poppins", sans-serif;
+            line-height: 21px;
+            color: rgba(map-get($md-cfaccent, 500), .34);
+            font-weight: 400;
+
+            & .mat-form-field-wrapper{
+              & .mat-form-field-flex{
+                & .mat-form-field-infix{
+                  border-top:none;
+                }
+              }
+            }
+          }
+
+          & simple-tag {
+            @include inline-block-btn;
+            margin: 15px 5px 0px 5px;
+          }
+
+          & mat-form-field {
+            font-size: 14px;
+            display: block;
+            &.search {
+              border-radius: 50px;
+              background-color: $bg-color-1;
+            }
+          }
+        }
+
+        .side-filter-btn {
+          @include btn-align-center;
+          & action-button {
+            @include inline-block-btn;
+            margin-top: 10px;
+          }
+        }
+
       }
 
       .list-container {
